--- a/SWAVE/Base.lproj/Main.storyboard
+++ b/SWAVE/Base.lproj/Main.storyboard
@@ -364,72 +364,112 @@
                                     <constraint firstItem="81w-by-rCU" firstAttribute="centerY" secondItem="kbP-YQ-9AH" secondAttribute="centerY" id="fhz-oP-RBS"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ZL0-gY-0Xd">
-                                <rect key="frame" x="20" y="130" width="335" height="411"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RwT-q1-mTJ">
+                                <rect key="frame" x="0.0" y="110" width="375" height="578"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="topic" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JxJ-TS-g3x">
-                                        <rect key="frame" x="0.0" y="0.0" width="54.333333333333336" height="33"/>
-                                        <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="24"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                        <variation key="heightClass=compact-widthClass=compact">
-                                            <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="20"/>
-                                        </variation>
-                                        <variation key="heightClass=compact-widthClass=regular">
-                                            <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="20"/>
-                                        </variation>
-                                    </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="enter your topic here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qM4-ac-fdO" customClass="PaddedTextField" customModule="SWAVE" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="38" width="335" height="30"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ZL0-gY-0Xd">
+                                        <rect key="frame" x="20" y="20" width="335" height="311"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="topic" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JxJ-TS-g3x">
+                                                <rect key="frame" x="0.0" y="0.0" width="54.333333333333336" height="33"/>
+                                                <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                                <variation key="heightClass=compact-widthClass=compact">
+                                                    <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="20"/>
+                                                </variation>
+                                                <variation key="heightClass=compact-widthClass=regular">
+                                                    <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="20"/>
+                                                </variation>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="enter your topic here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qM4-ac-fdO" customClass="PaddedTextField" customModule="SWAVE" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="38" width="335" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="KtC-i1-1qY"/>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWd-gQ-olO">
+                                                <rect key="frame" x="0.0" y="73" width="95" height="33"/>
+                                                <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                                <variation key="heightClass=compact-widthClass=compact">
+                                                    <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="20"/>
+                                                </variation>
+                                                <variation key="heightClass=compact-widthClass=regular">
+                                                    <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="20"/>
+                                                </variation>
+                                            </label>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Gdt-id-Lzj" customClass="InputTextView" customModule="SWAVE" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="111" width="335" height="200"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="200" id="GkE-ki-ExW"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
+                                            </textView>
+                                        </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="KtC-i1-1qY"/>
+                                            <constraint firstAttribute="trailing" secondItem="qM4-ac-fdO" secondAttribute="trailing" id="JTx-L1-gFe"/>
+                                            <constraint firstAttribute="trailing" secondItem="Gdt-id-Lzj" secondAttribute="trailing" id="QjV-Gu-L48"/>
+                                            <constraint firstItem="qM4-ac-fdO" firstAttribute="leading" secondItem="ZL0-gY-0Xd" secondAttribute="leading" id="snD-kP-zae"/>
+                                            <constraint firstItem="Gdt-id-Lzj" firstAttribute="leading" secondItem="ZL0-gY-0Xd" secondAttribute="leading" id="y2h-FY-3Gx"/>
                                         </constraints>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="16"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWd-gQ-olO">
-                                        <rect key="frame" x="0.0" y="73" width="95" height="33"/>
-                                        <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="24"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                        <variation key="heightClass=compact-widthClass=compact">
-                                            <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="20"/>
-                                        </variation>
-                                        <variation key="heightClass=compact-widthClass=regular">
-                                            <fontDescription key="fontDescription" name="Avenir-LightOblique" family="Avenir" pointSize="20"/>
-                                        </variation>
-                                    </label>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Gdt-id-Lzj" customClass="InputTextView" customModule="SWAVE" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="111" width="335" height="300"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="300" id="Cfz-u9-9uM"/>
-                                        </constraints>
-                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="16"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
-                                    </textView>
+                                    </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="qM4-ac-fdO" secondAttribute="trailing" id="JTx-L1-gFe"/>
-                                    <constraint firstAttribute="trailing" secondItem="Gdt-id-Lzj" secondAttribute="trailing" id="QjV-Gu-L48"/>
-                                    <constraint firstItem="qM4-ac-fdO" firstAttribute="leading" secondItem="ZL0-gY-0Xd" secondAttribute="leading" id="snD-kP-zae"/>
-                                    <constraint firstItem="Gdt-id-Lzj" firstAttribute="leading" secondItem="ZL0-gY-0Xd" secondAttribute="leading" id="y2h-FY-3Gx"/>
+                                    <constraint firstAttribute="bottom" secondItem="ZL0-gY-0Xd" secondAttribute="bottom" constant="20" id="CvP-O1-qiw"/>
+                                    <constraint firstItem="ZL0-gY-0Xd" firstAttribute="top" secondItem="RwT-q1-mTJ" secondAttribute="top" constant="20" id="LZa-9V-5ap"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZL0-gY-0Xd" secondAttribute="trailing" constant="20" id="Rlh-EG-8sh"/>
+                                    <constraint firstItem="ZL0-gY-0Xd" firstAttribute="leading" secondItem="RwT-q1-mTJ" secondAttribute="leading" constant="20" id="YiT-R4-cN4"/>
+                                    <constraint firstItem="ZL0-gY-0Xd" firstAttribute="width" secondItem="RwT-q1-mTJ" secondAttribute="width" constant="-40" id="bLs-cU-Al8"/>
                                 </constraints>
-                            </stackView>
+                            </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zNr-lU-Sxf">
+                                <rect key="frame" x="20" y="708" width="335" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="55n-Wj-1LR">
+                                        <variation key="heightClass=compact-widthClass=compact" constant="40"/>
+                                        <variation key="heightClass=compact-widthClass=regular" constant="40"/>
+                                    </constraint>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="lbz-1w-NK7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="24"/>
+                                <state key="normal" title="ADD">
+                                    <color key="titleColor" white="0.94999999999999996" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="addPressed:" destination="CtU-L1-ewx" eventType="touchUpInside" id="6OJ-Bm-W2W"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="HhZ-Kx-jDy" firstAttribute="top" secondItem="NUD-qc-zxV" secondAttribute="top" id="3pt-tG-xG2"/>
-                            <constraint firstItem="dGd-sG-JOw" firstAttribute="trailing" secondItem="ZL0-gY-0Xd" secondAttribute="trailing" constant="20" id="FKa-Dl-JeQ"/>
+                            <constraint firstItem="dGd-sG-JOw" firstAttribute="bottom" secondItem="zNr-lU-Sxf" secondAttribute="bottom" constant="20" id="8g2-PR-th9"/>
+                            <constraint firstItem="zNr-lU-Sxf" firstAttribute="leading" secondItem="dGd-sG-JOw" secondAttribute="leading" constant="20" id="AjQ-mT-Eif"/>
+                            <constraint firstItem="RwT-q1-mTJ" firstAttribute="top" secondItem="HhZ-Kx-jDy" secondAttribute="bottom" id="Eqq-f5-EQd"/>
+                            <constraint firstItem="zNr-lU-Sxf" firstAttribute="top" secondItem="RwT-q1-mTJ" secondAttribute="bottom" constant="20" id="O3M-XD-hlg"/>
+                            <constraint firstItem="RwT-q1-mTJ" firstAttribute="leading" secondItem="dGd-sG-JOw" secondAttribute="leading" id="QrF-rN-W4u"/>
+                            <constraint firstItem="dGd-sG-JOw" firstAttribute="trailing" secondItem="zNr-lU-Sxf" secondAttribute="trailing" constant="20" id="Z2g-Pf-O0t"/>
                             <constraint firstItem="HhZ-Kx-jDy" firstAttribute="leading" secondItem="dGd-sG-JOw" secondAttribute="leading" id="Zrr-sH-HbI"/>
-                            <constraint firstItem="ZL0-gY-0Xd" firstAttribute="leading" secondItem="dGd-sG-JOw" secondAttribute="leading" constant="20" id="wk6-Ti-Log"/>
-                            <constraint firstItem="ZL0-gY-0Xd" firstAttribute="top" secondItem="HhZ-Kx-jDy" secondAttribute="bottom" constant="20" id="yp7-ck-Fbu"/>
+                            <constraint firstItem="RwT-q1-mTJ" firstAttribute="trailing" secondItem="dGd-sG-JOw" secondAttribute="trailing" id="i33-iP-geL"/>
                             <constraint firstItem="HhZ-Kx-jDy" firstAttribute="trailing" secondItem="dGd-sG-JOw" secondAttribute="trailing" id="yqN-8d-H1t"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dGd-sG-JOw"/>
                     </view>
+                    <connections>
+                        <outlet property="addBtn" destination="zNr-lU-Sxf" id="DQd-Px-CpL"/>
+                        <outlet property="bottomConstraint" destination="O3M-XD-hlg" id="nvY-Wv-tCy"/>
+                        <outlet property="messageTV" destination="Gdt-id-Lzj" id="0U9-gW-6mH"/>
+                        <outlet property="scrollView" destination="RwT-q1-mTJ" id="EP7-6A-jJU"/>
+                        <outlet property="topicTF" destination="qM4-ac-fdO" id="7O8-nf-7cW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="btN-KG-b6t" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
